--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "babel-plugin-root-import": "^6.4.1",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "react": "16.9.0",
     "react-native": "0.61.5"
   },
