--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.2",
     "babel-plugin-root-import": "^6.4.1",
+    "date-fns": "^2.0.0-beta.5",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "immer": "^5.3.6",
     "prop-types": "^15.7.2",
